--- a/package.json
+++ b/package.json
@@ -24,12 +24,21 @@
   "homepage": "https://github.com/MatteoDeFaria/KsosBack#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "concurrently": "^7.6.0",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "winston": "^3.8.2"
