--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "winston": "^3.8.2"
